# providence

./: .gitignore  CMakeLists.txt  README.md  Team210.nfo  common.h  config.h  config_types.h  convert_cmd  draw.h  ls.c  pal_win32.h  providence.json  scenes.h  sequence.h  sfx.frag  sfx.h  timing_concept
engine/: debug.h  loader.h  midi.h  orchestrator.h  platform.h  renderer.h  shader.h
font/: font.gen.py  font.h  fontconv.py  fontgen.py  pack.old.py  pack.py  strings.txt
gfx/: black.frag  branch.frag  butterfly.frag  debug.frag  flowers.frag  forestinside.frag  forestmountains.frag  greetings.frag  load.frag  mountains.frag  post.frag  text.frag
gfx/symbols/: addprogressbar.frag  addwindow.frag  dglyph.frag  dglyphpts.frag  dspline22.frag  dspline32.frag  dvoronoi3.frag  hash41.frag  hash42.frag  hash43.frag  hash44.frag  rshort.frag  zextrude.frag
sketch/: 5711.frag  CMakeLists.txt  approx.py  boomtimes  butterfly.frag  extract.py  fconv.bat  fconv.c  fconv.frag  font.h  gencomp.py  loadttf.c  nr4sketch.frag  team210.frag  vortex.frag
studio/: apc40mk2.ui  apc40mk2widget.cpp  apc40mk2widget.h  apc40mk2widget.ui  demoapi.cpp  demoapi.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  nanokontrol2.ui  nanokontrol2Widget.cpp  nanokontrol2Widget.h  renderviewwidget.cpp  renderviewwidget.h  studio.cpp
studio/SurfaceEditor/: SurfaceNode.hpp  SurfaceObject.hpp  SurfaceScene.hpp  SurfaceTransformation.hpp
